--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-shot-challenge",
+  "name": "react-starter",
   "version": "0.0.1",
   "description": "Application Name",
   "main": "./src/index.js",
@@ -22,6 +22,7 @@
     "babel-plugin-ramda": "^1.4.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bourbon": "^5.0.0",
     "bourbon-neat": "2.1.0",
     "caniuse-lite": "^1.0.30000810",
